--- a/source/_posts/[專案開發日常—2].md
+++ b/source/_posts/[專案開發日常—2].md
@@ -1,6 +1,6 @@
 ---
 title: 專案開發日常—2
-index_img: /img/a.png
+index_img: /img/index-2.png
 tags: [專案開發日常,linebot, 飲水機]
 date: January 22, 2022 10:51 AM
 ---
